# projeto_crud_ecommerce

./: README.md  api.py  exemplo_01.py  pyproject.toml
src/: db.py  pokemons.db
