[project]
name = "projeto-crud-ecommerce"
version = "0.1.0"
description = ""
authors = [
    {name = "IgorNatann",email = "Igornatan4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
